# python-security-signal-sdk

./: .flake8  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: pre-commit.yml  release.yml  tests.yml
src/sqreen_security_signal_sdk/: __about__.py  __init__.py  accumulator.py  client.py  compat_model.py  exceptions.py  model.py  sender.py  utils.py
tests/integration/: test_sender.py
tests/unit/: test_accumulator.py  test_client.py  test_model.py  test_sender.py  test_utils.py
