[metadata]
name = sqreen_security_signal_sdk
description = Sqreen Security Signal SDK for Python
long-description = file: README.md
home-page = https://github.com/sqreen/python-security-signal-sdk
author = Sqreen
author-email = support@sqreen.com
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP
    Topic :: Security
license = MIT License
license_file = LICENSE

[options]
package_dir =
    = src
packages = find:
install_requires =
    urllib3 >=1.25
    futures; python_version == "2.7"
    typing; python_version < "3.6"
    enum34; python_version < "3.4"

[options.extras_require]
dev =
    pre-commit
    mypy
    flake8
    isort
test =
    pytest >=4.6.0,<4.7; python_version <= "3.4"
    pytest; python_version > "3.4"
    pytest-cov
    tox
    freezegun

[options.packages.find]
where = src
